BUG 2444, 2446, 2448, 2443, 2430, 2432, 2436, 2437: Page view fixes * Don't load page view, show pill buttons in non-tabular views * Add noInterstitial to page view links for SDP * Hide overflowing content in page view so items don't overlap * Hide extra parts of map UI in page view * Force refesh of grid after switching back from page view in case something in the grid changed (like adding a column) * Allow URLs with ports as valid in URL editor * Force empty the mainGrid container to clear out First row/Next row
QA:
* Make sure bugs are fixed

--- a/app/styles/screen-map.sass
+++ b/app/styles/screen-map.sass
@@ -100,3 +100,7 @@
 
     &:hover
       margin-top: -908px
+
+.pageRenderType
+  #mapLegend, #mapLayers
+    display: none
